--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,13 @@
 # PR this file to: https://github.com/flipperdevices/flipper-application-catalog/
 # applications/Sub-GHz/flipper_share/manifest.yml
 
+# Check: python3 tools/bundle.py --nolint applications/Sub-GHz/flipper_share/manifest.yml bundle.zip
+
 sourcecode:
   type: git
   location:
     origin: https://github.com/lomalkin/flipper-zero-apps.git
-    commit_sha: TBD
+    commit_sha: 14deab6409df2d0dc3dfc245b2c140ea1d46204b
     subdir: flipper_share
 description: "@README.md"
 changelog: "@CHANGELOG.md"
