--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   push:
     branches: 
-      - main
+      - master
   pull_request:
   schedule: 
     # do a build every day
